--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compartable" content="ie=edge">
-  <title>Document</title>
+  <title>Проект</title>
 </head>
 <body>
   <script src="project.js"></script>
